feat: implement enhanced ExecuteRequestDto and FileDto to support multiple files, stdin, CLI args, custom timeouts, and memory limits for code execution